--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -40,11 +40,11 @@
                 </svg>
                 <p>Asunción, Paraguay</p>
             </div> 
-            <a href="#">Contactar</a>
+            <a class="boton" href="#">Contactar</a>
         </div>   
     </section>
 
-    <main>  
+    <main class="contenedor sombra">  
         <h2>Mis Servicios</h2>
         <section>
             <h3>Diseño Web</h3>
@@ -97,7 +97,7 @@
     </main>
 
     
-    <section>
+    <section class="contenedor">
         <h2>Contacto</h2>
         <form>
             <fieldset>
